fix: add chat module

--- a/demo/src/main/resources/static/test.html
+++ b/demo/src/main/resources/static/test.html
@@ -142,6 +142,7 @@
         <div class="links">
             <a href="/swagger-ui.html" target="_blank">📖 Swagger UI</a>
             <a href="/api-docs" target="_blank">📄 API Docs</a>
+            <a href="/chat-test.html" target="_blank">💬 실시간 채팅 테스트</a>
         </div>
 
         <div id="tokenDisplay" class="token-display" style="display: none;">
@@ -233,9 +234,10 @@
                 <li>📁 <strong>Category</strong> - 카테고리 관리</li>
                 <li>📝 <strong>Post</strong> - 게시글 관리</li>
                 <li>💬 <strong>Comment</strong> - 댓글 시스템 (대댓글 지원)</li>
-                <li>📎 <strong>File</strong> - 파일 업로드/관리</li>
+                <li>📎 <strong>File</strong> - 파일 업로드/관리 (AWS S3)</li>
                 <li>🔔 <strong>Notification</strong> - 알림 시스템</li>
                 <li>📊 <strong>Statistics</strong> - 통계 관리</li>
+                <li>🗨️ <strong>Chat</strong> - 실시간 채팅 (WebSocket)</li>
             </ul>
             <p><strong>사용법:</strong></p>
             <ol>
